Add only numeric characters to TPOS in ID3 Tags

https://bugzilla.gnome.org/show_bug.cgi?id=726467